@@ -69,5 +69,7 @@ or other contributions: (in no particular order)
 * Eduard Bloch
 * Toru TAKAMIZU
 * Henk Csaba
+* Vallimar de Morieve
+* Eric-Olivier LE BIGOT
 
 thanks! (I've probably forgot someone, sorry. Drop my a mail and I'll add you)
